After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 772248 - Screen no longer blanks / enters DPMS after being woken at lockscreen once if session idleness is inhibited
Screen no longer blanks / enters DPMS after being woken at lockscreen once if...
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: power
3.22.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2016-09-30 11:29 UTC by Hans de Goede
Modified: 2016-10-04 09:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
power: Ensure we blank the screen when locked (4.37 KB, patch)
2016-10-03 14:40 UTC, Rui Matos
committed Details | Review

Description Hans de Goede 2016-09-30 11:29:31 UTC
To reproduce:

1) Take Fedora 25 (fully up2date as of today)
2) skylake workstation with 2 1920x1080 monitors
3) Log into gnome3
4) super + l
5) Wait for monitors to go into dpms
6) "accidentally" wiggle mouse
7) Monitors wakeup, wait for monitors to go into dpms again
8) Monitors never get back into dpms

NB my main reproducer for this is pressing the "play" button when I want to listen to music with my monitors otherwise off, since gnome-3.22 seems to automatically pause the audio when locking the screen, is this configurable somewhere ? If not can it be made configurable please. If I want the audio paused I'll do so manually before locking.
Comment 1 Rui Matos 2016-09-30 15:11:02 UTC
Can you run:

/usr/libexec/gnome-settings-daemon --debug --replace

capture the output to a file and attach it here?

I can't reproduce this FWIW.
Comment 2 Hans de Goede 2016-10-01 10:21:47 UTC
I just applied all the latest F25 updates this morning and I can no longer reproduce.

I've seen this on and off the last few days (I had the same problem a couple of days ago, then tried to reproduce and I couldn't). I've a hunch this may somehow be kernel version related, as I've been jumping between 4.6 and 4.8 due to some skylake gfx issues in 4.7 and 4.8.

Anyways lets close this for now, I'll re-open if I can reproduce again and I'm sure it is not a kernel thing.
Comment 3 Hans de Goede 2016-10-01 10:23:37 UTC
p.s. The music pausing when locking thing is fixed now too, so this might actually be gnome-related after all and that one of this mornings updates fixed it.
Comment 4 Rui Matos 2016-10-03 14:31:10 UTC
I happened to reproduce this by chance this weekend and we do indeed have a logic bug for blanking the screen when there's a session idleness inhibitor up, patch incoming.
Comment 5 Rui Matos 2016-10-03 14:40:04 UTC
Created attachment 336822 [details] [review]
power: Ensure we blank the screen when locked

When the session is inhibited from getting idle e.g. because a media
player is active, we still want to blank the screen if the session is
locked (i.e. the "screensaver" is up).

Otherwise, we'd blank the screen when the session gets locked but then
any user activity would put us in NORMAL mode, unblanking the screen,
without an idle watch to blank again after a while.
Comment 6 Bastien Nocera 2016-10-03 22:05:22 UTC
Review of attachment 336822 [details] [review]:

Yes. Please also backport and add a little explanation of what the fix does (I missed the fact that we should set up the aggressive idle before the inhibition checks, because they exit).

Also make sure to backport to at least gnome-3-18
Comment 7 Rui Matos 2016-10-04 09:46:40 UTC
Pushing with the suggested commit message changes.

   4f28fed..adc368f  gnome-3-18 -> gnome-3-18
   071031e..05304f2  gnome-3-20 -> gnome-3-20
   84c2c56..0f8a828  gnome-3-22 -> gnome-3-22
   dd0dba2..22144d0  master -> master

Attachment 336822 [details] pushed as 22144d0 - power: Ensure we blank the screen when locked
Comment 8 Rui Matos 2016-10-04 09:50:13 UTC
(In reply to Hans de Goede from comment #0)
> since gnome-3.22 seems to
> automatically pause the audio when locking the screen, is this configurable
> somewhere ? If not can it be made configurable please. If I want the audio
> paused I'll do so manually before locking.

BTW, this is a different issue which I can't reproduce. I've seen reports of it for HDMI display/sound output combos but AFAICT, gnome doesn't pause audio by itself when blanking screens.