power: Ensure we blank the screen when locked

When the session is inhibited from going idle e.g. because a media
player is active, we still want to blank the screen if the session is
locked (i.e. the "screensaver" is up).

Otherwise, we'd blank the screen when the session gets locked but then
on user activity we'd go back to NORMAL mode, unblanking the screen,
and ending up without an idle watch to blank again after a while since
we clear all watches and exit early if idle is inhibited.

https://bugzilla.gnome.org/show_bug.cgi?id=772248